fix Sonarlint issues