@@ -9,11 +9,11 @@ import de.mankianer.tresensystem.repository.ProductRepository;
 import de.mankianer.tresensystem.restcontroller.dto.UpdateOrderDTO;
 import de.mankianer.tresensystem.security.entities.Authority.AuthorityEnum;
 import de.mankianer.tresensystem.security.entities.User;
+import org.springframework.stereotype.Service;
+
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
-import org.springframework.stereotype.Service;
 
 @Service
 public class OrderService {
@@ -97,21 +97,18 @@ public class OrderService {
    * @throws OrderNotFound if the order is not found by id and user
    */
   public Order updateOrder(Order order) throws OrderNotFound {
-    Order orderToUpdate = orderRepository.findByIdAndPurchaser(order.getId(), order.getPurchaser())
-        .orElseThrow(
-            () -> new OrderNotFound("id: " + order.getId() + " and user: " + order.getPurchaser()));
+    getOrderById(order.getId());
     return orderRepository.save(order);
   }
 
   public Order convertUpdateOrderDTO(UpdateOrderDTO updateOrderDTO, boolean isCreatedByUser)
       throws ProductNotFoundException {
     Order order = new Order();
-    var oProducts = updateOrderDTO.getProducts().stream().map(productRepository::findById).collect(
-        Collectors.toList());
+    var oProducts = updateOrderDTO.getProducts().stream().map(productRepository::findById).toList();
     if (oProducts.stream().anyMatch(Optional::isEmpty)) {
       throw new ProductNotFoundException("one or more product(s) not found " + updateOrderDTO.getProducts());
     }
-    order.setProducts(oProducts.stream().map(Optional::get).collect(Collectors.toList()));
+    order.setProducts(oProducts.stream().map(Optional::get).toList());
     order.setPurchaser(updateOrderDTO.getPurchaser());
     order.setCreatedByUser(isCreatedByUser);
     return order;
